2008-05-02  Dan Bernstein  <mitz@apple.com>

        Reviewed by Adam Roben.

        - add an option to svn-apply to set the reviewer name in change logs

        * Scripts/svn-apply: Added a [-r|--reviewer name] option.

2008-05-01  David Kilzer  <ddkilzer@apple.com>

        Clean up configuration usage in run-webkit-tests

        Reviewed by Adam.

        * Scripts/run-webkit-tests: Parse configuration switches using
        passedConfiguration() from webkitdirs.pm like every other script.
        Note that we must still call setConfiguration() afterwards in
        case the --configuration switch was used.  Use $configurationOption
        when running build-dumprendertree instead of recreating the switch.

2008-04-29  Adam Roben  <aroben@apple.com>

        Restore the beloved COMPtr::operator&

2008-04-29  Adam Roben  <aroben@apple.com>

        Windows build fixes

        Replace COMPtr::operator& with COMPtr::adoptionPointer.

2008-04-25  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        Fix run-webkit-tests --threading
        and provisionally fix <https://bugs.webkit.org/show_bug.cgi?id=18661>
        Proxy server issue in Sunday's Nightly

        * DumpRenderTree/pthreads/JavaScriptThreadingPthreads.cpp:
        (runJavaScriptThread):
        (startJavaScriptThreads):
        (stopJavaScriptThreads):
        Spawned threads were immediately detached, unlike the original ones, so joining them
        made no sense. Now, all threads are created detached, and stopJavaScriptThreads() just
        waits for them all to exit.

2008-04-28  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Simon.

        Reset dumping resource load callbacks to false for the next test
        

        * DumpRenderTree/qt/jsobjects.cpp:
        (LayoutTestController::reset):

2008-04-28  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Adapt to the latest API changes in WebKit/qt/Api.
